Writing and stuff (+ some figures to describe smoothing)

--- a/doc/paper.bib
+++ b/doc/paper.bib
@@ -286,3 +286,18 @@
   publisher    = {{ACM}},
   year         = {2015}
 }
+@inproceedings{DBLP:conf/kr/BroeckMD14,
+  author    = {Guy {Van den Broeck} and
+               Wannes Meert and
+               Adnan Darwiche},
+  title     = {Skolemization for Weighted First-Order Model Counting},
+  booktitle = {{KR}},
+  publisher = {{AAAI} Press},
+  year      = {2014}
+}
+@book{hinman2018fundamentals,
+  title={Fundamentals of mathematical logic},
+  author={Hinman, Peter G.},
+  year={2018},
+  publisher={CRC Press}
+}
